--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,41 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>My custom Bulma website</title>
-    <link rel="stylesheet" href="css/mystyles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>User</title>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-
 <body>
-    <h1 class="title">
-        Bulma
-    </h1>
-
-    <p class="subtitle">
-        Modern CSS framework based on <a
-            href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Flexbox</a>
-    </p>
-
-    <div class="field">
-        <div class="control">
-            <input class="input" type="text" placeholder="Input">
-        </div>
-    </div>
-
-    <div class="field">
-        <p class="control">
-            <span class="select">
-                <select>
-                    <option>Select dropdown</option>
-                </select>
-            </span>
-        </p>
-    </div>
-
-    <div class="buttons">
-        <a class="button is-primary">Primary</a>
-        <a class="button is-link">Link</a>
-    </div>
+    <div class="container" id="app"></div>
+    <script src="js/bundle.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
-
 </html>
