--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,5 +14,8 @@
     <script src="js/bundle.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+    
+</script>
 </body>
 </html>
